<resources>
    <string name="app_name">ChatApp</string>
    <string name="etName">Enter Name</string>
    <string name="etPassword">Enter Password</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="CorrectEmail">Enter Correct Email</string>
    <string name="Login">Login</string>
    <string name="Play">Play Game</string>
    <string name="DeleteAcc">Delete Account</string>
    <string name="PasswordMismatch">password Mismatch</string>
    <string name="etEmail">Enter Email</string>
    <string name="etOldPassword">Enter Old Password</string>
    <string name="etConfPassword">Confirm Password</string>
    <string name="SignUp">SignUp</string>
    <string name="Fullname">FullName</string>
    <string name="DonthaveAccount">Don\'t have an Account?</string>
    <string name="todo">TODO</string>
    <string name="Save">Save</string>
    <string name="changePassword">Change Password</string>
    <string name="changePicture">Change Picture</string>
    <string name="removePicture">Remove Picture</string>
    <string name="Logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="Resend">Resend in %1$s </string>
    <string name="resetPassword">Reset Password</string>
    <string name="resetLink">Reset Link Instructions has been sent to Email : %1$s </string>
    <string name="Retry">Retry</string>
    <string name="Close">Close</string>
    <string name="PleaseWait">Please Wait...</string>
    <string name="InternetConnection">Check Internet Connection</string>
    <string name="no_internet">No Internet</string>
    <string name="close">Close</string>
    <string name="ChatApp">ChatApp</string>
    <string name="chat">Chat</string>
    <string name="request">Requests</string>
    <string name="Find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptyChatList">Chat List Will Appear Here</string>
    <string name="emptyFriendList">Friend List will Appear Here</string>
    <string name="emptyRequestList">Request List will Appear Here</string>
    <string name="sentFriendRequest">Send Friend Request</string>
    <string name="cancelRequest">Cancel Request</string>
    <string name="Accept">Accept</string>
    <string name="Deny">Deny</string>
    <string name="LastMessage">Last Message</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="tvFileProgress">Uploading %1$s  (%2$s  %%)</string>
    <string name="tvDownloadProgress">Downloading %1$s  (%2$s  %%)</string>
    <string name="Forward">Forward</string>
    <string name="Delete">Delete</string>
    <string name="Share">Share</string>
    <string name="Download">Download</string>
    <string name="view">View</string>
    <string name="UnHide">UnHide Chats</string>
    <string name="EditText">Edit Text</string>
    <string name="Call">Call</string>
    <string name="Hide">Hide</string>
    <string name="ReadNews">Read News</string>
    <string name="sendLocation">Send Location</string>
    <string name="etNumber">Enter Number</string>
    <string name="EnterValidNumber">Enter Valid Number</string>

</resources>