<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuForward"
        android:icon="@drawable/ic_forward"
        android:title="@string/Forward"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnuDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/Delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnuShare"
        android:icon="@drawable/ic_share"
        android:title="@string/Share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuDownload"
        android:icon="@drawable/ic_download"
        android:title="@string/Download"
        app:showAsAction="ifRoom" />
</menu>